feat(worker) : add get workers, fix dockerfile
